@@ -1,5 +1,23 @@
 # Root logger option
-log4j.rootLogger=INFO, stdout
+log4j.rootLogger=INFO, stdout, FILE
+ 
+# Define the file appender
+log4j.appender.FILE=org.apache.log4j.RollingFileAppender
+# Set the name of the file
+log4j.appender.FILE.File=testDriverErrorLog.txt
+ 
+# Set the maximum file size before rollover
+log4j.appender.FILE.MaxFileSize=5KB
+ 
+# Set the the backup index
+log4j.appender.FILE.MaxBackupIndex=1
+ 
+# Define the layout for file appender
+log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
+log4j.appender.FILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+
+# Set the logger level of File Appender to WARN
+log4j.appender.FILE.Threshold = ERROR
  
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
